--- a/ToastPopupSample/ToastPopupSample.csproj
+++ b/ToastPopupSample/ToastPopupSample.csproj
@@ -53,6 +53,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AcrylicView.Maui" Version="2.1.3" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.70" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
 		<PackageReference Include="Mopups" Version="1.3.3" />
